[package]
name = "tauri-plugin-remote-caching"
version = "1.0.0"
authors = [ "Altaks" ]
description = "A Tauri plugin that allows to cache remote files"
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.7.2", features = ["fs-all", "path-all"] }
serde = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"]}